@@ -10,6 +10,11 @@ qtcreator (4.5.1-1) UNRELEASED; urgency=medium
   * Remove botan patches. We can now use USE_SYSTEM_BOTAN as soon as botan2
     hits the archive. Thanks Christian Kandeler for the pointer!
 
+  [ Alexander Volkov ]
+  * Revert "Export LLVM_INSTALL_DIR without harcoding the version." since
+    this method doesn't work with libclang-3.9-dev and llvm-3.9-dev
+    build dependencies.
+
  -- Simon Quigley <tsimonq2@ubuntu.com>  Sat, 10 Mar 2018 22:49:31 -0600
 
 qtcreator (4.5.0-3) unstable; urgency=medium
